# cell

./: .gitignore  CITATION.md  CMakeLists.txt  CMakeLists.txt.user.7daf412  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  config.hpp.in
application/: CMakeLists.txt  main.cpp
application/cmake/: packages.cmake
cmake/: compiler-options.cmake  packages.cmake
cmake/platforms-toolchain/: macos-toolchain.cmake
config/: database-config.json  globalization-config.json  system-config.json
include/cell/: application  convertors  cron  datetime  dynamics  installer  interface  requirements
include/cell/abstracts/: menu
precompiled/: pch.hpp
precompiled/linux/: pch.hpp
precompiled/unix/: pch.hpp
precompiled/win32/: pch.hpp
source/: availabilityversion.hpp  common.hpp  defines.hpp  interface.hpp  prestructure.hpp
source/abstracts/: api.cpp  api.hpp  base.cpp  base.hpp  cache.cpp  cache.hpp  captcha.cpp  captcha.hpp  configuration.cpp  configuration.hpp  convertor.cpp  convertor.hpp  device.cpp  device.hpp  email.cpp  email.hpp  installer.cpp  installer.hpp  menu.cpp  menu.hpp  message.cpp  message.hpp  page.cpp  page.hpp  post.cpp  post.hpp  powersave.cpp  powersave.hpp  service.cpp  service.hpp  setting.cpp  setting.hpp  sms.cpp  sms.hpp  transfer.cpp  transfer.hpp  updater.cpp  updater.hpp
source/abstracts/account/: activities.cpp  activities.hpp  basicdata.hpp  groups.cpp  groups.hpp  user-concepts.hpp  usermanager.cpp  usermanager.hpp  usermedia.cpp  usermedia.hpp
source/abstracts/apis/: apikey.cpp  apikey.hpp  basic.cpp  basic.hpp  bearertoken.cpp  bearertoken.hpp  digestauth.cpp  digestauth.hpp
source/abstracts/blockchain/: client.hpp  eth.hpp  ethutils.cpp  ethutils.hpp  rpcmethods.hpp
source/abstracts/calendar/: calendar.cpp  calendar.hpp
source/abstracts/database/: connection.cpp  connection.hpp  connectionpool.cpp  connectionpool.hpp  datamanipulator.cpp  datamanipulator.hpp  maintenance.cpp  maintenance.hpp  management.cpp  management.hpp  query.cpp  query.hpp  querybuilder.cpp  querybuilder.hpp  tableanalyzer.cpp  tableanalyzer.hpp  tablemanager.cpp  tablemanager.hpp  transaction.cpp  transaction.hpp
source/abstracts/dynamics/: module.cpp  module.hpp  moduleinterface.cpp  moduleinterface.hpp  modulemanager.cpp  modulemanager.hpp  moduleschema.cpp  moduleschema.hpp  plugin.cpp  plugin.hpp  plugininterface.cpp  plugininterface.hpp  pluginmanager.cpp  pluginmanager.hpp
source/classes/: compressor.cpp  compressor.hpp  cookies.cpp  cookies.hpp  cronjob.cpp  cronjob.hpp  eventloop.cpp  eventloop.hpp  groups.cpp  groups.hpp  mediatypes.cpp  mediatypes.hpp  sessions.cpp  sessions.hpp  taskmanager.cpp  taskmanager.hpp  timezone.cpp  timezone.hpp
source/classes/dynamics/: module.cpp  module.hpp  moduleinterface.cpp  moduleinterface.hpp  modulemanager.cpp  modulemanager.hpp  moduleschema.cpp  moduleschema.hpp  plugin.cpp  plugin.hpp  plugininterface.cpp  plugininterface.hpp  pluginmanager.cpp  pluginmanager.hpp  pluginschema.cpp  pluginschema.hpp
source/core/: backup.cpp  backup.hpp  config.cpp  config.hpp  console.cpp  console.hpp  core-concepts.hpp  core-meta.hpp  core.cpp  core.hpp  filesystem.cpp  filesystem.hpp  format.cpp  format.hpp  groups.cpp  groups.hpp  html.cpp  html.hpp  integers.cpp  integers.hpp  json.cpp  json.hpp  linkparser.cpp  linkparser.hpp  logger.cpp  logger.hpp  message.cpp  message.hpp  minify.cpp  minify.hpp  regex.cpp  regex.hpp  renderer.hpp  renderformat.cpp  renderformat.hpp  repository.cpp  repository.hpp  serializer.cpp  serializer.hpp  setting.cpp  (+15 more)
source/core/convertor/: units.cpp  units.hpp
source/core/datetime/: calendar-concepts.hpp  calendar.cpp  (+5 more)
source/translator/: dictionary.cpp  dictionary.hpp  language.cpp  language.hpp  translator.cpp  translator.hpp
translations/: ar_SA.json  az_AZ.json  de_DE.json  en_UK.json  en_US.json  es_ES.json  fa_IR.json  fr_FR.json  hi_IN.json  ja_JP.json  pt_PT.json  ru_RU.json  tr_TR.json  uk_UA.json  zh_CN.json
utilities/: featuretest.hpp  prefuncs.hpp  preprocessor.hpp  types.hpp
(+118 files in other folders)
